--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.8",
     "@studio-freight/react-lenis": "^0.0.47",
     "@tanstack/react-query": "^5.55.1",
     "axios": "^1.7.7",
