--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.55.1",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "date-fns": "^4.0.0-beta.1",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.439.0",
     "next": "14.2.7",
