--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "swiper": "^11.1.12",
     "tailwind-merge": "^2.5.2",
-    "vaul": "^0.9.2"
+    "vaul": "^0.9.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
