--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.8",
+    "@nextui-org/react": "^2.4.8",
     "@studio-freight/react-lenis": "^0.0.47",
     "@tanstack/react-query": "^5.55.1",
     "axios": "^1.7.7",
